[package]
name = "kvs"
version = "0.1.0"
authors = ["Yv Chen <c2425868832@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
thiserror = "1.0.40"
serde = { version = "1.0.2", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"
tempfile = "3.5.0"
walkdir = "2.3.3"
