[package]
name = "kvs"
version = "0.1.0"
authors = ["Yv Chen <c2425868832@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
env_logger = "0.10.0"
thiserror = "1.0.40"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "2.0.10"
criterion = "0.4.0"
crossbeam-utils = "0.8.15"
predicates = "3.0.2"
rand = "0.8.5"
tempfile = "3.5.0"
walkdir = "2.3.3"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false
